<resources>
    <string name="app_name">JerryStore</string>
    <string name="profile_image">Profile image</string>
    <string name="hi_jerry">Hi, Jerry 👋🏻</string>
    <string name="which_tom_do_you_want_to_buy">Which Tom do you want to buy?</string>
    <string name="bell">bell</string>
    <string name="search_about_tom">Search about tom ...</string>
    <string name="buy_1_tom_and_get_2_for_free">Buy 1 Tom and get 2 for free</string>
    <string name="adopt_tom_free_fail_free_guarantee">Adopt Tom! (Free Fail-Free \nGuarantee)</string>
    <string name="cheap_tom_section">Cheap tom section</string>
    <string name="view_all">View all</string>
    <string name="sport_tom">Sport Tom</string>
    <string name="he_runs_1_meter_trips_over_his_boot">He runs 1 meter... trips \nover his boot.\n</string>
    <string name="_3_cheeses">3 cheeses</string>
    <string name="tom_the_lover">Tom the lover</string>
    <string name="he_loves_one_sidedly_and_is_beaten_by_the_other_side">He loves one-sidedly... and is beaten by the other side.</string>
    <string name="_5_cheeses">5 cheeses</string>
    <string name="tom_the_bomb">Tom the bomb</string>
    <string name="he_blows_himself_up_before_jerry_can_catch_him">He blows himself up before Jerry can catch him.</string>
    <string name="spy_tom">Spy Tom</string>
    <string name="disguises_itself_as_a_table">Disguises itself as a table.</string>
    <string name="_10_cheeses">10 cheeses</string>
    <string name="_12_cheeses">12 cheeses</string>
</resources>