<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <include layout="@layout/top_bar" />

    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/averageMargin"
        android:autofillHints="emailAddress"
        android:background="@drawable/search_background"
        android:drawableStart="@drawable/search_normal"
        android:drawablePadding="8dp"
        android:fontFamily="@font/ibm_plex_sans_arabic_regular"
        android:hint="@string/search_about_tom"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textSize="14dp"
        android:textFontWeight="400"
        android:layout_marginEnd="@dimen/smallMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterLayout"
        app:layout_constraintTop_toTopOf="@+id/filterLayout"
        app:layout_constraintBottom_toBottomOf="@+id/filterLayout"/>

    <FrameLayout
        android:id="@+id/filterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/averageMargin"
        android:layout_marginTop="8dp"
        android:background="@drawable/filter_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">
        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/smallMargin"
            android:background="@drawable/ic_filter" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginStart="@dimen/averageMargin"
        android:layout_marginEnd="@dimen/averageMargin"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:background="@drawable/gradient_blue_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterLayout">

        <TextView
            android:id="@+id/heading_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_arabic_semi_bold"
            android:text="@string/buy_1_tom_and_get_2_for_free"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_arabic_medium"
            android:text="@string/adopt_tom_free_fail_free_guarantee"
            android:textColor="@color/secondaryText"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="@+id/heading_card_text"
            app:layout_constraintTop_toBottomOf="@+id/heading_card_text" />

        <ImageView
            android:layout_width="139.22dp"
            android:layout_height="113.69dp"
            android:background="@drawable/ellipse_1"
            android:translationX="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="132.05dp"
            android:layout_height="110.74dp"
            android:background="@drawable/ellipse_1"
            android:translationX="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:background="@drawable/tom_counting_money"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>